--- a/io.github.prateekmedia.appimagepool.yml
+++ b/io.github.prateekmedia.appimagepool.yml
@@ -15,6 +15,8 @@ finish-args:
   - --share=network
   - --device=dri
   - --filesystem=~/Applications:create
+  - --filesystem=~/.local/share/applications:create
+  - --filesystem=~/.local/share/icons:create
   - --talk-name=org.freedesktop.Flatpak
   - --talk-name=org.freedesktop.Notifications
 modules:
